# stock-tracking-cli

./: Cargo.toml  Readme.md
src/: main.rs  symbol.rs
