[package]
name = "stock-tracking-cli"
version = "0.1.0"
authors = ["dpinart <dpinart@uxland.cat>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yahoo_finance_api]
version = "1.1.5"
default-features = false
features = ["blocking"]

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
crossbeam = "0.8.0"
